--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ pid /run/nginx.pid;
 error_log /var/log/nginx/error.log;
 include /etc/nginx/modules-enabled/*.conf;
 
+# Load ModSecurity dynamic module
+load_module /etc/nginx/modules-enabled/ngx_http_modsecurity_module.so;
+
 events {
 	worker_connections 768;
 	# multi_accept on;
