--- a/nginx.conf
+++ b/nginx.conf
@@ -39,8 +39,16 @@ http {
 	##
 	# Logging Settings
 	##
+        
+        log_format main '$remote_addr - $remote_user [$time_local] '
+                        '"$request" $status $body_bytes_sent '
+                        '"$http_referer" "$http_user_agent" $http_x_forwarded_for"';
 
-	access_log /var/log/nginx/access.log;
+        log_format vhost '$host $remote_addr - $remote_user [$time_local] '
+                         '"$request" $status $body_bytes_sent '
+                         '"$http_referer" "$http_user_agent" $http_x_forwarded_for"';
+
+        access_log /var/log/nginx/access.log;
 
 	##
 	# Gzip Settings
