--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,7 @@
 user www-data;
 worker_processes auto;
+worker_rlimit_nofile 4096;
+
 pid /run/nginx.pid;
 error_log /var/log/nginx/error.log;
 include /etc/nginx/modules-enabled/*.conf;
@@ -8,7 +10,7 @@ include /etc/nginx/modules-enabled/*.conf;
 load_module /etc/nginx/modules-enabled/ngx_http_modsecurity_module.so;
 
 events {
-	worker_connections 768;
+	worker_connections 2048;
 	# multi_accept on;
 }
 
